--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#16242f" />
-    <meta name="description" content="WebMathMech UrFU course website" />
-    <link rel="manifest" href="/static/manifest.json" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <meta name="description" content="Better admission list" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="https://fonsts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>WebMathMech</title>
   </head>
   <body style="margin: 0">
