--- a/static/index.html
+++ b/static/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#16242f" />
-    <meta name="description" content="WebMathMech UrFU course website" />
+    <meta name="description" content="Better UrFU admission list" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>WebMathMech</title>
+    <title>Better admission list</title>
   </head>
   <body style="margin: 0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
